Refactoring the code examples after adding linter to CI/CD  (#118)
* added a linter run command to CI/CD

* set failOnViolation property to true

* refactoring the code to ensure the build runs smoothly

* fixes after merge

* fixed build failure

* fixed build failure

* removing extra catches

* changed system.out.printLn to logger calls

* renamed static final variable

* fixing build issues

* fix for linter

* fixed build issue

* fixes for codestyle

---------

Signed-off-by: Anna Hileta <80112359+annahileta@users.noreply.github.com>