@@ -7,11 +7,11 @@ import com.docusign.esign.model.*;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public final class PhoneAuthenticationService {
     private static final String DOCUMENT_FILE_NAME = "World_Wide_Corp_lorem.pdf";
+
     private static final String DOCUMENT_NAME = "Lorem";
 
     public static EnvelopeSummary phoneAuthentication(
@@ -24,7 +24,7 @@ public final class PhoneAuthenticationService {
 
     //ds-snippet-start:eSign20Step4
     public static EnvelopeDefinition createEnvelope(String signerName, String signerEmail, String countryCode,
-                                                     String phone, String workFlowId) throws IOException {
+                                                    String phone, String workFlowId) throws IOException {
         Document doc = EnvelopeHelpers.createDocumentFromFile(DOCUMENT_FILE_NAME, DOCUMENT_NAME, "1");
 
         SignHere signHere = new SignHere();
@@ -47,12 +47,12 @@ public final class PhoneAuthenticationService {
         RecipientIdentityInputOption inputOption = new RecipientIdentityInputOption();
         inputOption.setName("phone_number_list");
         inputOption.setValueType("PhoneNumberList");
-        inputOption.setPhoneNumberList(Arrays.asList(phoneNumber));
+        inputOption.setPhoneNumberList(List.of(phoneNumber));
 
         RecipientIdentityVerification identityVerifcation = new RecipientIdentityVerification();
 
         identityVerifcation.setWorkflowId(workFlowId);
-        identityVerifcation.setInputOptions(Arrays.asList(inputOption));
+        identityVerifcation.setInputOptions(List.of(inputOption));
 
         Signer signer = new Signer();
         signer.setName(signerName);
@@ -65,11 +65,11 @@ public final class PhoneAuthenticationService {
         signer.setIdentityVerification(identityVerifcation);
 
         Recipients recipients = new Recipients();
-        recipients.setSigners(Arrays.asList(signer));
+        recipients.setSigners(List.of(signer));
 
         EnvelopeDefinition envelope = new EnvelopeDefinition();
         envelope.setEmailSubject("Please Sign");
-        envelope.setDocuments(Arrays.asList(doc));
+        envelope.setDocuments(List.of(doc));
         envelope.setEnvelopeIdStamping("true");
         envelope.setEmailBlurb("Sample text for email body");
         envelope.setStatus(EnvelopeHelpers.ENVELOPE_STATUS_SENT);
